tests/fsharp/typecheck/sigs/neg_byref_23.bsl

neg_byref_23.fs(4,5,4,6): typecheck error FS0431: A byref typed value would be stored here. Top-level let-bound byref values are not permitted.
